--- a/PowerPack/v.01/PowerPack/src/net/vdombox/PowerPack/com/control/HelpTip.mxml
+++ b/PowerPack/v.01/PowerPack/src/net/vdombox/PowerPack/com/control/HelpTip.mxml
@@ -2,7 +2,7 @@
 <mx:Box xmlns:mx="http://www.adobe.com/2006/mxml">
 	<mx:Script>
 		<![CDATA[
-			import net.vdombox.PowerPack.com.managers.ContextManager;
+		import net.vdombox.powerpack.com.managers.ContextManager;
 		]]>
 	</mx:Script>
 	
