--- a/PowerPack/v.01/PowerPack/src/net/vdombox/PowerPack/com/panel/Variables.mxml
+++ b/PowerPack/v.01/PowerPack/src/net/vdombox/PowerPack/com/panel/Variables.mxml
@@ -9,22 +9,21 @@
 	
 	<mx:Script>
 		<![CDATA[
-			import net.vdombox.PowerPack.com.managers.ContextManager;
-			import net.vdombox.PowerPack.com.managers.LanguageManager;
-			
-			static private var defaultCaptions:Object = {
-				variables_title:"Variables",
-				name: "Name",
-				value: "Value"
-			}			
-			
-			static private var _classConstructed:Boolean = classConstruct(); 
-			
-			static private function classConstruct():Boolean
-			{
-				LanguageManager.setSentences(defaultCaptions);
-				return true
-			}			
+		import net.vdombox.powerpack.com.managers.ContextManager;
+		import net.vdombox.powerpack.com.managers.LanguageManager;
+
+		static private var defaultCaptions : Object = {
+			variables_title:"Variables",
+			name: "Name",
+			value: "Value"
+		}
+
+		static private var _classConstructed : Boolean = classConstruct();
+
+		static private function classConstruct() : Boolean {
+			LanguageManager.setSentences( defaultCaptions );
+			return true
+		}
 		]]>
 	</mx:Script>
 	
