--- a/PowerPack/v.01/PowerPack/src/net/vdombox/PowerPack/com/dialog/EditCaption.mxml
+++ b/PowerPack/v.01/PowerPack/src/net/vdombox/PowerPack/com/dialog/EditCaption.mxml
@@ -1,92 +1,81 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ModalDialog 
-	xmlns="net.vdombox.PowerPack.com.dialog.*" 
+	xmlns="net.vdombox.powerpack.com.dialog.*"
 	xmlns:mx="http://www.adobe.com/2006/mxml" 
 	width="300" height="130"
 	creationComplete="onShow()">
 	<mx:Script>
 		<![CDATA[
-			import net.vdombox.PowerPack.com.managers.LanguageManager;
-			
-			private static var _dialog:EditCaption;
-			
-			public var _checkCategoryLabel : Function;
-			
-			static public function show(title:String, closeHandler:Function = null, checkCategoryLabel:Function = null):EditCaption
-			{
-				if(!_dialog || _dialog.closed) 
+		import net.vdombox.powerpack.com.managers.LanguageManager;
+
+		private static var _dialog : EditCaption;
+
+		public var _checkCategoryLabel : Function;
+
+		static public function show( title : String, closeHandler : Function = null, checkCategoryLabel : Function = null ) : EditCaption {
+			if ( !_dialog || _dialog.closed ) {
+				_dialog = new EditCaption();
+				_dialog._checkCategoryLabel = checkCategoryLabel;
+				_dialog.title = title;
+				_dialog.open();
+				_dialog.show( OK | CANCEL, closeHandler, null, OK );
+			}
+			else {
+				_dialog.activate();
+			}
+
+			return _dialog;
+		}
+
+		private function onShow() : void {
+			txtCaption.errorString = null;
+			txtCaption.setFocus();
+		}
+
+		static public function closeDialog() : void {
+			if ( !_dialog || _dialog.closed )
+				return;
+
+			_dialog.close();
+		}
+
+		static public function showCategoryLabelError() : void {
+			if ( !_dialog || _dialog.closed )
+				return;
+
+			_dialog.showDialogLabelError();
+		}
+
+		public function showDialogLabelError() : void {
+			txtCaption.errorString = LanguageManager.sentences['msg_enter_unique_category_label'];
+		}
+
+		protected override function removeDialog( buttonPressed : String ) : void {
+			switch ( buttonPressed ) {
+				case BUTTON_NAME_OK:
 				{
-					_dialog = new EditCaption();
-					_dialog._checkCategoryLabel = checkCategoryLabel;
-					_dialog.title = title;	
-					_dialog.open();
-					_dialog.show(OK | CANCEL, closeHandler, null, OK);				
-				}				
-				else 
-				{
-					_dialog.activate();
-				}	
-				
-				return _dialog;
-			}	
-			
-			private function onShow():void
-			{
-				txtCaption.errorString = null;
-				txtCaption.setFocus();
-			}
-			
-			static public function closeDialog() : void 
-			{
-				if (!_dialog || _dialog.closed)
-					return;
-				
-				_dialog.close();
-			}
-			
-			static public function showCategoryLabelError() : void 
-			{
-				if (!_dialog || _dialog.closed)
-					return;
-				
-				_dialog.showDialogLabelError();
-			}
-			
-			public function showDialogLabelError():void
-			{
-				txtCaption.errorString = LanguageManager.sentences['msg_enter_unique_category_label'];
-			}
-			
-			protected override function removeDialog(buttonPressed:String):void
-			{
-				switch(buttonPressed)
-				{
-					case BUTTON_NAME_OK:
-					{
-						if (_checkCategoryLabel != null)
-							_checkCategoryLabel(_dialog.txtCaption.text);
-						else
-							_dialog.close();
-						break;
-					}
-					case BUTTON_NAME_CANCEL:
-					{
+					if ( _checkCategoryLabel != null )
+						_checkCategoryLabel( _dialog.txtCaption.text );
+					else
 						_dialog.close();
-						break;
-					}	
-					default:
-					{
-						_dialog.close();
-						break;
-					}
+					break;
+				}
+				case BUTTON_NAME_CANCEL:
+				{
+					_dialog.close();
+					break;
+				}
+				default:
+				{
+					_dialog.close();
+					break;
 				}
 			}
-			
-			protected function onCaptionTxtChange(event:Event):void
-			{
-				txtCaption.errorString = null;
-			}
-			
+		}
+
+		protected function onCaptionTxtChange( event : Event ) : void {
+			txtCaption.errorString = null;
+		}
 		]]>
 	</mx:Script>	
 	
