--- a/PowerPack/v.01/PowerPack/src/net/vdombox/PowerPack/com/dialog/GenProperties.mxml
+++ b/PowerPack/v.01/PowerPack/src/net/vdombox/PowerPack/com/dialog/GenProperties.mxml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <GenModalDialog 
 	xmlns:mx="http://www.adobe.com/2006/mxml"
-	xmlns="net.vdombox.PowerPack.com.dialog.*" 
-	xmlns:control="net.vdombox.PowerPack.com.control.*"
+	xmlns="net.vdombox.powerpack.com.dialog.*"
+	xmlns:control="net.vdombox.powerpack.com.control.*"
 	xmlns:controls="ExtendedAPI.com.controls.*" 
 	title="{LanguageManager.sentences.properties}"
 	width="450" height="240" 
@@ -10,57 +10,53 @@
 	
 	<mx:Script>
 		<![CDATA[
-			import mx.events.CloseEvent;
-			import ExtendedAPI.com.utils.FileUtils;
-			import mx.utils.StringUtil;
-			import net.vdombox.PowerPack.com.managers.ContextManager;
-			import net.vdombox.PowerPack.com.managers.LanguageManager;
-			
-			private static var _dialog:GenProperties;
-			
-			static public function show(closeHandler:Function = null):GenProperties
-			{
-				if(!_dialog || _dialog.closed) 
-				{
-					_dialog = new GenProperties();	
-					_dialog.open();
-					_dialog.addEventListener(CloseEvent.CLOSE, _dialog.onClose);
-					_dialog.show(OK | CANCEL, closeHandler, null, OK);	
-					
-					var defaultCaptions:Object = {
-						save_to_server: "Save to server",
-						save_to_file: "Save to file",					
-						hlp_save_to_server: "Save generated application xml to server",
-						hlp_save_to_file: "Save generated application xml to file",
-						hlp_app_file: "Select file for saving application xml"
-					};
-					
-					LanguageManager.setSentences(defaultCaptions);								
-				}				
-				else 
-				{
-					_dialog.activate();
-				}	
-				
-				return _dialog;
+		import mx.events.CloseEvent;
+
+		import ExtendedAPI.com.utils.FileUtils;
+
+		import mx.utils.StringUtil;
+
+		import net.vdombox.powerpack.com.managers.ContextManager;
+		import net.vdombox.powerpack.com.managers.LanguageManager;
+
+		private static var _dialog : GenProperties;
+
+		static public function show( closeHandler : Function = null ) : GenProperties {
+			if ( !_dialog || _dialog.closed ) {
+				_dialog = new GenProperties();
+				_dialog.open();
+				_dialog.addEventListener( CloseEvent.CLOSE, _dialog.onClose );
+				_dialog.show( OK | CANCEL, closeHandler, null, OK );
+
+				var defaultCaptions : Object = {
+					save_to_server: "Save to server",
+					save_to_file: "Save to file",
+					hlp_save_to_server: "Save generated application xml to server",
+					hlp_save_to_file: "Save generated application xml to file",
+					hlp_app_file: "Select file for saving application xml"
+				};
+
+				LanguageManager.setSentences( defaultCaptions );
 			}
-			
-			private function onClose(event:Event):void
-			{
-				if(event is CloseEvent && CloseEvent(event).detail == ModalDialog.OK)
-            	{
-					ContextManager.instance.saveToServer = chkServer.selected; 
-					ContextManager.instance.saveToFile = chkFile.selected;
-					ContextManager.instance.file.url = FileUtils.pathToUrl(fileBrowse.text);
-            	}
+			else {
+				_dialog.activate();
 			}
-			
-			private function onShow():void
-			{
-				fileBrowse.text = ContextManager.instance.file.nativePath;
-				chkServer.setFocus();
-			}			
-				
+
+			return _dialog;
+		}
+
+		private function onClose( event : Event ) : void {
+			if ( event is CloseEvent && CloseEvent( event ).detail == ModalDialog.OK ) {
+				ContextManager.instance.saveToServer = chkServer.selected;
+				ContextManager.instance.saveToFile = chkFile.selected;
+				ContextManager.instance.file.url = FileUtils.pathToUrl( fileBrowse.text );
+			}
+		}
+
+		private function onShow() : void {
+			fileBrowse.text = ContextManager.instance.file.nativePath;
+			chkServer.setFocus();
+		}
 		]]>
 	</mx:Script>
 	
