--- a/PowerPack/v.01/PowerPack/src/net/vdombox/PowerPack/com/dialog/soap/Login.mxml
+++ b/PowerPack/v.01/PowerPack/src/net/vdombox/PowerPack/com/dialog/soap/Login.mxml
@@ -10,60 +10,56 @@
 
 	<mx:Script>
 		<![CDATA[
-			import net.vdombox.PowerPack.com.managers.ContextManager;
-			import net.vdombox.PowerPack.com.managers.LanguageManager;
-			
-			import connection.SOAP;
-			import connection.SOAPEvent;
-			
-			import mx.events.FlexEvent;
-			import mx.managers.PopUpManager;
-//			import mx.events.ItemClickEvent;
-			
-			private static var _dialog:Login;
-			
+		import net.vdombox.powerpack.com.managers.ContextManager;
+		import net.vdombox.powerpack.com.managers.LanguageManager;
 
-			
-/* 			public static function show(	parent:Sprite = null, 
-											closeHandler:Function = null):void
-			{
-				var dialog:Login = new Login();		            
-				
-				PopUpManager.addPopUp(dialog, parent, true);
-				PopUpManager.centerPopUp(dialog);
-			} */
-			
-			
-			
-			
-			
-			/////////////////////////////
-			private var soap:SOAP = SOAP.getInstance();
-			
-			protected function windowedapplication1_creationCompleteHandler(event:FlexEvent):void
-			{
-				var hostname:String = '192.168.0.41'
-				var wsdl:String = "http://" + hostname + "/vdom.wsdl";
-				soap.addEventListener( "loadWsdlComplete", soap_initCompleteHandler );
-				soap.init(wsdl);
-			}
-			
-			private function soap_initCompleteHandler(event:Event):void
-			{
-				soap.addEventListener(SOAPEvent.LOGIN_OK, soap_loginOKHandler);
-				soap.addEventListener(SOAPEvent.LOGIN_ERROR, soap_loginErrorHandler);
-				
-				soap.login('root','root');
-			}
-			
-			private function soap_loginOKHandler(event:SOAPEvent):void
-			{
-				trace("OK");
-			}
-			private function soap_loginErrorHandler(event:SOAPEvent):void
-			{
-				trace("ERROR");
-			}
+		import connection.SOAP;
+		import connection.SOAPEvent;
+
+		import mx.events.FlexEvent;
+		import mx.managers.PopUpManager;
+
+		//			import mx.events.ItemClickEvent;
+
+		private static var _dialog : Login;
+
+		/* 			public static function show(	parent:Sprite = null,
+		 closeHandler:Function = null):void
+		 {
+		 var dialog:Login = new Login();
+
+		 PopUpManager.addPopUp(dialog, parent, true);
+		 PopUpManager.centerPopUp(dialog);
+		 } */
+
+
+
+
+
+		/////////////////////////////
+		private var soap : SOAP = SOAP.getInstance();
+
+		protected function windowedapplication1_creationCompleteHandler( event : FlexEvent ) : void {
+			var hostname : String = '192.168.0.41'
+			var wsdl : String = "http://" + hostname + "/vdom.wsdl";
+			soap.addEventListener( "loadWsdlComplete", soap_initCompleteHandler );
+			soap.init( wsdl );
+		}
+
+		private function soap_initCompleteHandler( event : Event ) : void {
+			soap.addEventListener( SOAPEvent.LOGIN_OK, soap_loginOKHandler );
+			soap.addEventListener( SOAPEvent.LOGIN_ERROR, soap_loginErrorHandler );
+
+			soap.login( 'root', 'root' );
+		}
+
+		private function soap_loginOKHandler( event : SOAPEvent ) : void {
+			trace( "OK" );
+		}
+
+		private function soap_loginErrorHandler( event : SOAPEvent ) : void {
+			trace( "ERROR" );
+		}
 		]]>
 	</mx:Script>
 	
