--- a/IDE/v.02/modules/Events/src/net/vdombox/ide/modules/events/view/skins/EventElementSkin.mxml
+++ b/IDE/v.02/modules/Events/src/net/vdombox/ide/modules/events/view/skins/EventElementSkin.mxml
@@ -4,8 +4,7 @@
 			 xmlns:mx="library://ns.adobe.com/flex/halo"
 			 xmlns:s="library://ns.adobe.com/flex/spark"
 			 minWidth="200"
-			 creationComplete="sparkskin1_creationCompleteHandler(event)" xmlns:mx1="library://ns.adobe.com/flex/mx" xmlns:view="net.vdombox.view.*"
-			 mouseOver="{ imageArraw.alpha = 1; imageDelete.alpha = 1 }" mouseOut="{ imageArraw.alpha = .5; imageDelete.alpha = .5 }">
+			 creationComplete="sparkskin1_creationCompleteHandler(event)" xmlns:mx1="library://ns.adobe.com/flex/mx" xmlns:view="net.vdombox.view.*">
 
 	<fx:Metadata>
 		[HostComponent("net.vdombox.ide.modules.events.view.components.EventElement")]
@@ -174,7 +173,7 @@
 							color="#FFFFFF" textAlign="center"
 							verticalCenter="0" maxDisplayedLines="1" />	
 
-				<s:Group top="0" bottom="0" right="0" width="45">
+				<s:Group top="0" bottom="0" right="0" width="40">
 						
 					<s:Rect bottom="0" left="0" right="0" top="0">
 						<s:fill>
@@ -185,14 +184,14 @@
 						</s:fill>
 					</s:Rect>
 						
-					<s:HGroup id="imageGroup" height="100%" horizontalAlign="right" verticalAlign="middle" paddingRight="5">
+					<s:HGroup id="imageGroup" height="100%" horizontalAlign="right" verticalAlign="middle" paddingRight="5" gap="1">
 							
 						<mx1:Image id="imageArraw" source="@Embed('assets/arrow.png')" 
-								   alpha=".5"
+								   alpha=".5" mouseOver="{ imageArraw.alpha = 1 }" mouseOut="{ imageArraw.alpha = .5 }"
 								   click="hostComponent.dispatchEvent( new ElementEvent( ElementEvent.CREATE_LINKAGE ) )" />
 							
 						<mx1:Image id="imageDelete" source="@Embed('assets/delete.png')" 
-								   alpha=".5"
+								   alpha=".5" mouseOver="{ imageDelete.alpha = 1 }" mouseOut="{ imageDelete.alpha = .5 }"
 								   click="hostComponent.dispatchEvent( new ElementEvent( ElementEvent.DELETE ) )" />
 							
 					</s:HGroup>
